--- a/unifiedModel.ipynb
+++ b/unifiedModel.ipynb
@@ -530,7 +530,7 @@
     "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Assume df is your DataFrame and 'PVI_T2241' is the column you want to predict\n",
+    "#'PVI_T2241' is the column that we want to predict due to high feature importance\n",
     "X = df[['PVI_T2242', 'PVI_T2243', 'PVI_T2244', 'PVI_T2245', 'PVI_T2246', 'PVI_T2250', 'PVI_T2231']]  # features\n",
     "y = dfA['PVI_T2241']  # target variable\n",
     "\n",
@@ -949,11 +949,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assuming finalDf is your DataFrame and it already contains your PCA results\n",
-    "# finalDf = pd.DataFrame()  # Replace this with your actual DataFrame\n",
-    "# target = []  # Replace this with your actual target variable\n",
-    "\n",
-    "# Create a scatter plot of the two principal components\n",
+    "# scatter plot of the two principal components\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(x='principal component 1', y='principal component 2', hue=target, data=finalDf)\n",
     "\n",
@@ -1089,12 +1085,12 @@
     }
    ],
    "source": [
-    "\n",
+    "#Plot the Fault type 0 = no abnormality 1-temperature abnormality 2-rupture\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Define the color palette\n",
-    "palette = {0: 'orange', 1: 'green', 2: 'blue'}  # Add more colors if you have more unique numbers\n",
+    "palette = {0: 'orange', 1: 'green', 2: 'blue'}  \n",
     "\n",
     "# Create a line plot\n",
     "sns.scatterplot(x=dfGenTest.index, y='predicted values', hue='predicted labels', data=dfGenTest, palette=palette)\n",
@@ -1149,15 +1145,15 @@
     "# Create a fitter\n",
     "kmf = KaplanMeierFitter()\n",
     "\n",
-    "# Assume T is the time to event data and E is the event indicator\n",
-    "# T and E should be derived from your data\n",
+    "# T is the time to event data and E is the event indicator\n",
+    "# T and E should is derived from data\n",
     "T = dfC['Duration']\n",
     "E = dfC['Label']\n",
     "\n",
     "# Fit the data to the model\n",
     "kmf.fit(T, event_observed=E)\n",
     "\n",
-    "# # Create the Kaplan-Meier survival plot\n",
+    "# Create the Kaplan-Meier survival plot\n",
     "survival_probabilities = kmf.survival_function_\n",
     "dfSurv = dfC.drop_duplicates(subset='Duration', keep='first')"
    ]
@@ -1223,10 +1219,10 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "# Assume 'time' is the array of time values and 'survival_prob' is the array of survival probabilities\n",
-    "# These should be derived from your Kaplan-Meier curve\n",
-    "time = pd.to_datetime(dfC['F01'])  # Replace with your actual time data\n",
-    "survival_prob = dfC['Duration']  # Replace with your actual survival probability data\n",
+    "# 'time' is the array of time values and 'survival_prob' is the array of survival probabilities\n",
+    "# These should be derived from Kaplan-Meier curve\n",
+    "time = pd.to_datetime(dfC['F01'])  \n",
+    "survival_prob = dfC['Duration']  \n",
     "\n",
     "# Reshape the data for sklearn\n",
     "time = time.values.reshape(-1, 1)\n",
